<resources>
	<string name="app_name">LoquiCleanArchitecture</string>
	<string name="facebook_app_id">450002142492278</string>
	<string name="fb_login_protocol_scheme" translatable="false">fb450002142492278</string>
	<string name="loading">Loading…</string>
	<string name="facebook_status_fmt">Facebook User: %s</string>
	<string name="firebase_status_fmt">Firebase User: %s</string>
	<string name="sign_in_with_google">Sign in with Google</string>
	<string name="age">18</string>

	<string name="drawer_open">Drawer Opened</string>
	<string name="drawer_close">Drawer Closed</string>

	<string name="start_typing_status">Start typing</string>
	<string name="stop_typing_status">Stop typing</string>

	<string name="action_delete">Delete</string>
	<string name="action_copy">Copy</string>
	<string name="hint_enter_a_message">Type a message…</string>
	<string name="copied_message">Message copied!</string>

	<string name="unknown">Unknown</string>
	<string name="cancel">Cancel</string>
	<string name="confirm">OK</string>
	<string name="age_title">Age</string>
	<string name="not_specified">Not specified</string>
	<string name="anonymous">Anonymous</string>
	<string name="profile_gender_male">Male</string>
	<string name="profile_gender_title">Gender</string>
	<string name="profile_gender_female">Female</string>
	<string name="profile_nickname">Anonymous</string>
	<string name="profile_nickname_title">Nickname</string>
	<string name="profile_details_title">Profile details:</string>
	<string name="profile_iam_title">I am:</string>
	<string name="action_logout">logout</string>
	<string name="drawer_dialog_genderTitle">Search for:</string>
	<string name="drawer_dialog_genderMale">Man</string>
	<string name="drawer_dialog_genderFemale">Woman</string>
	<string name="drawer_dialog_genderBoth">Man or Woman</string>
	<string name="drawer_dialog_ageRangeTitle">Search range:</string>
	<string name="profile_dialog_nickname_title">Your nickname:</string>
	<string name="profile_age_title">Your age:</string>
	<string name="profile_nickname_hint">nickname</string>
	<string name="search_for">Search for:</string>
	<string name="settings">Settings :</string>
	<string name="layoutnickname">layoutNickname</string>
	<string name="layoutage">layoutAge</string>
	<string name="layoutgender">layoutGender</string>
	<string name="profile_photo_1">photo1</string>
	<string name="profile_photo_2">photo2</string>
	<string name="profile_photo_3">photo3</string>
	<string name="profile_photo_4">photo4</string>
	<string name="profile_photo_5">photo5</string>
	<string name="profile_photo_6">photo6</string>
</resources>
