<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="fill_parent"
                                                   android:layout_height="wrap_content"
                                                   android:background="@drawable/shape_profile_details"
                                                   android:orientation="vertical"
                                                   android:paddingBottom="20dp"
		>


	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:padding="10dp"
			app:layout_constraintStart_toStartOf="@+id/constraintLayoutAge"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="20dp"
			app:layout_constraintHorizontal_bias="0.0"
			android:id="@+id/constraintLayoutGender"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAge"
			>

		<TextView
				android:id="@+id/textView_profile_gender_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/profile_gender_title"
				tools:ignore="NestedWeights"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toEndOf="@+id/imageView_profile_gender_icon"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintEnd_toStartOf="@+id/textView_profile_gender_value"
				/>

		<ImageView
				android:id="@+id/imageView_profile_gender_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/ic_range_age_black"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintEnd_toStartOf="@+id/textView_profile_gender_title"
				android:layout_marginEnd="8dp"
				/>

		<TextView
				android:id="@+id/textView_profile_gender_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/not_specified"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toEndOf="@+id/textView_profile_gender_title"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintEnd_toEndOf="parent"
				/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<TextView
			android:id="@+id/textView_profile_text_details"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/profile_details_title"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			/>

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:padding="10dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:id="@+id/constraintLayoutAge"
			app:layout_constraintStart_toStartOf="@+id/constraintLayoutNickname"
			android:layout_marginEnd="20dp"
			app:layout_constraintHorizontal_bias="0.233"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNickname"
			>

		<TextView
				android:id="@+id/textView_profile_age_range_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/age_title"
				tools:ignore="NestedWeights"
				app:layout_constraintStart_toEndOf="@+id/imageView_profile_age_range_icon"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/textView_profile_age_value"
				android:layout_marginEnd="8dp"
				/>

		<ImageView
				android:id="@+id/imageView_profile_age_range_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/ic_gender_black"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintEnd_toStartOf="@+id/textView_profile_age_range_title"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginEnd="8dp"
				/>

		<TextView
				android:id="@+id/textView_profile_age_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/not_specified"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:padding="10dp"
			android:layout_marginEnd="20dp"
			app:layout_constraintStart_toStartOf="@+id/textView_profile_text_details"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/textView_profile_text_details"
			android:id="@+id/constraintLayoutNickname"
			>


		<TextView
				android:id="@+id/textView_profile_nickname_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/profile_nickname_title"
				tools:ignore="NestedWeights"
				app:layout_constraintStart_toEndOf="@+id/imageView_profile_nickname_icon"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintEnd_toStartOf="@+id/textView_profile_nickname_value"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				/>

		<ImageView
				android:id="@+id/imageView_profile_nickname_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/ic_person_black"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintEnd_toStartOf="@+id/textView_profile_nickname_title"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginEnd="8dp"
				/>

		<TextView
				android:id="@+id/textView_profile_nickname_value"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:text="@string/profile_nickname"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				/>
	</androidx.constraintlayout.widget.ConstraintLayout>

	<View
			android:id="@+id/divider"
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:background="?android:attr/listDivider"
			app:layout_constraintStart_toStartOf="@+id/constraintLayoutNickname"
			app:layout_constraintEnd_toEndOf="@+id/constraintLayoutNickname"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNickname"
			android:layout_marginTop="8dp"
			/>

	<View
			android:id="@+id/divider2"
			android:layout_width="343dp"
			android:layout_height="1dp"
			android:background="?android:attr/listDivider"
			app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAge"
			app:layout_constraintStart_toStartOf="@+id/constraintLayoutAge"
			app:layout_constraintEnd_toEndOf="@+id/constraintLayoutAge"
			android:layout_marginTop="8dp"
			/>


</androidx.constraintlayout.widget.ConstraintLayout>

